@@ -4,6 +4,9 @@ Revision history for Perl extension RPi::WiringPi.
         - added env var and related info about testing RPi::LCD in the testing
           section POD (closes #59)
         - fix small formatting issue (C<<>>) in POD (closes #56)
+        - test fixes/updates
+        - t/RPiTest.pm now checks whether the serial pins (14, 15) are in alt
+          mode 4 (default) or 2 (bluetooth disabled)
 
 2.3621  2017-10-03
         - removed the test/images and images/ directory from the repo
